Add variables for themes colors

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,8 @@
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
+
+@import 'scss/variables';
+@import 'scss/colors';
+@import 'scss/typography';
+@import 'scss/button';
