--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -102,8 +102,8 @@ $btn-primary-default-bg:  get-color($primary, 500);
 $btn-primary-hover-color: $white;
 $btn-primary-hover-bg:  get-color($primary, 400);
 
-$btn-primary-disabled-color: get-color($gray, 300);
-$btn-primary-disabled-bg: get-color($gray, 100);
+$btn-primary-disabled-color: get-color($secondary, 300);
+$btn-primary-disabled-bg: get-color($secondary, 100);
 
 //secondary button
 $btn-second-bg: $white;
@@ -114,8 +114,8 @@ $btn-second-default-border-color: get-color($primary, 300);
 $btn-second-hover-color:  get-color($primary, 500);
 $btn-second-hover-border-color: get-color($primary, 500);
 
-$btn-second-disabled-color: get-color($gray, 100);
-$btn-second-disabled-border-color: get-color($gray, 200);
+$btn-second-disabled-color: get-color($secondary, 100);
+$btn-second-disabled-border-color: get-color($secondary, 200);
 
 //tertiary button
 $btn-tertiary-default-color:  get-color($dark, 500);
@@ -124,8 +124,8 @@ $btn-tertiary-default-bg: get-color($primary, 200);
 $btn-tertiary-hover-color:  get-color($dark, 500);
 $btn-tertiary-hover-bg:  get-color($primary, 300);
 
-$btn-tertiary-disabled-color:  get-color($gray, 300);
-$btn-tertiary-disabled-bg:  get-color($gray, 100);
+$btn-tertiary-disabled-color:  get-color($secondary, 300);
+$btn-tertiary-disabled-bg:  get-color($secondary, 100);
 
 //link
 $btn-link-default-color: get-color($primary, 500);
@@ -133,7 +133,7 @@ $btn-link-default-color: get-color($primary, 500);
 $btn-link-hover-color: get-color($primary, 500);
 $btn-link-hover-bg: get-color($primary, 100);
 
-$btn-link-disabled-color: get-color($gray, 200);
+$btn-link-disabled-color: get-color($secondary, 200);
 
 
 
