--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -1,31 +1,29 @@
 /* Layout.module.css */
 :root {
-    --sidebar-width: 250px;
+  --sidebar-width: 290px;
 }
 
 .sidebar {
-    width: var(--sidebar-width);
-    background: linear-gradient(to bottom, #faecc2, #fdeeaa);
+  width: var(--sidebar-width);
+  background: #ffffff;
 }
 
 .content {
-    width: calc(100% - var(--sidebar-width) - 40px);
-    margin: 20px;
+  width: calc(100% - var(--sidebar-width) - 40px);
+  border-left: 1px solid #bcbaba; /* Đường viền bên trái */
 }
 
 .content:before {
-    margin-left: var(--sidebar-width);
-    content: ' ';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: calc(100% - var(--sidebar-width));
-    height: 100%;
-    opacity: 0.2;
-    background-color: #faecc2;
-    background-image: url(@/assets/HoaVanTD.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 30vw auto;
+  margin-left: var(--sidebar-width);
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: calc(100% - var(--sidebar-width));
+  height: 100%;
+  opacity: 0.2;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30vw auto;
 }
