--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,70 +1,83 @@
 //----------------COLORS-----------------------
 $primary: (
-    "100": #D6DFFF,
-    "200": #AEC0FF,
-    "300": #85A0FF,
-    "400": #5D81FF,
-    "500": #3461FF
+  "100": #d6dfff,
+  "200": #aec0ff,
+  "300": #85a0ff,
+  "400": #5d81ff,
+  "500": #3461ff
 );
 $dark: (
-    "100": #BCBABA,
-    "200": #949292,
-    "300": #6C6B6B,
-    "400": #444343,
-    "500": #1C1C1C
+  "100": #bcbaba,
+  "200": #949292,
+  "300": #6c6b6b,
+  "400": #444343,
+  "500": #1c1c1c
 );
 $secondary: (
-    "100": #E1E4EB,
-    "200": #C2C9D6,
-    "300": #A4AFC2,
-    "400": #8594AD,
-    "500": #677999
+  "100": #e1e4eb,
+  "200": #c2c9d6,
+  "300": #a4afc2,
+  "400": #8594ad,
+  "500": #677999
 );
-$white: #FAFAFA;
-$green: #12B76A;
-$red: #F04438;
-$orange: #F79009;
+$white: #fafafa;
+$green: #12b76a;
+$red: #f04438;
+$orange: #f79009;
 
 $theme-colors: (
-    "primary":    #3461FF,
-    "dark":       #1C1C1C,
-    "secondary":  #677999,
-    "light":      $white,
-    "success":    $green,
-    "danger":     $red,
-    "warning":    $orange
+  "primary": #3461ff,
+  "dark": #1c1c1c,
+  "secondary": #677999,
+  "light": $white,
+  "success": $green,
+  "danger": $red,
+  "warning": $orange
 );
 
 //Function to get color value from color map
 @function get-color($colors, $key) {
-    @return map-get($colors, $key);
+  @return map-get($colors, $key);
 }
 
-
-
 //-------------------------TYPO------------------------------
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 //font-family
 $font-family: Poppins;
 
 //title font size
-$title-font-size: ("lg": 40px, "md": 32px, "sm": 28px);
+$title-font-size: (
+  "lg": 40px,
+  "md": 32px,
+  "sm": 28px
+);
 
 //body font size
-$body-font-size: ("lg": 24px, "md": 20px, "rg": 16px, "sm": 12px);
+$body-font-size: (
+  "lg": 24px,
+  "md": 20px,
+  "rg": 16px,
+  "sm": 12px
+);
 
 //font weight
-$font-weight: ("bold": 700, "semibold": 600, "medium": 500, "regular": 40, "light": 300);
+$font-weight: (
+  "bold": 700,
+  "semibold": 600,
+  "medium": 500,
+  "regular": 400,
+  "light": 300
+);
 
 //Function to get font size value from font size map
 @function get-font-size($font-sizes, $key) {
-    @return map-get($font-sizes, $key);
+  @return map-get($font-sizes, $key);
 }
 
 //Function to get font weight value from font weight map
 @function get-font-weight($font-weight, $key) {
-    @return map-get($font-weight, $key);
+  @return map-get($font-weight, $key);
 }
 
 //------------------------BUTTON----------------------------
@@ -94,13 +107,12 @@ $btn-link-padding-y: 8px;
 $btn-border-width: 1px;
 $btn-border-radius: 16px;
 
-
 //primary button
 $btn-primary-default-color: $white;
-$btn-primary-default-bg:  get-color($primary, 500);
+$btn-primary-default-bg: get-color($primary, 500);
 
 $btn-primary-hover-color: $white;
-$btn-primary-hover-bg:  get-color($primary, 400);
+$btn-primary-hover-bg: get-color($primary, 400);
 
 $btn-primary-disabled-color: get-color($secondary, 300);
 $btn-primary-disabled-bg: get-color($secondary, 100);
@@ -108,24 +120,24 @@ $btn-primary-disabled-bg: get-color($secondary, 100);
 //secondary button
 $btn-second-bg: $white;
 
-$btn-second-default-color:  get-color($primary, 500);
+$btn-second-default-color: get-color($primary, 500);
 $btn-second-default-border-color: get-color($primary, 300);
 
-$btn-second-hover-color:  get-color($primary, 500);
+$btn-second-hover-color: get-color($primary, 500);
 $btn-second-hover-border-color: get-color($primary, 500);
 
 $btn-second-disabled-color: get-color($secondary, 100);
 $btn-second-disabled-border-color: get-color($secondary, 200);
 
 //tertiary button
-$btn-tertiary-default-color:  get-color($dark, 500);
+$btn-tertiary-default-color: get-color($dark, 500);
 $btn-tertiary-default-bg: get-color($primary, 200);
 
-$btn-tertiary-hover-color:  get-color($dark, 500);
-$btn-tertiary-hover-bg:  get-color($primary, 300);
+$btn-tertiary-hover-color: get-color($dark, 500);
+$btn-tertiary-hover-bg: get-color($primary, 300);
 
-$btn-tertiary-disabled-color:  get-color($secondary, 300);
-$btn-tertiary-disabled-bg:  get-color($secondary, 100);
+$btn-tertiary-disabled-color: get-color($secondary, 300);
+$btn-tertiary-disabled-bg: get-color($secondary, 100);
 
 //link
 $btn-link-default-color: get-color($primary, 500);
@@ -134,15 +146,3 @@ $btn-link-hover-color: get-color($primary, 500);
 $btn-link-hover-bg: get-color($primary, 100);
 
 $btn-link-disabled-color: get-color($secondary, 200);
-
-
-
-
-
-
-
-
-
-
-
-
