--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -4,9 +4,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
   justify-content: space-between;
   padding: 20px 32px;
-  background-color: transparent;
+  background-color: #ffffff;
   border-bottom: 1px solid #bcbaba;
 
   .breadcrumb-item {
