--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -1,16 +1,23 @@
 @import "../../scss/_variables.scss";
 
 .sidebar {
+  padding: 0;
   .menuList {
     list-style: none;
     width: 110px;
+  }
+  .nav {
+    padding: 0;
+  }
+
+  .nav-children {
+    width: 230px;
   }
 
   .logo {
     font-family: $font-family;
     font-weight: bold;
     align-self: center;
-    margin-top: 18px;
   }
 
   .systems {
@@ -26,15 +33,15 @@
     font-family: $font-family;
     color: #000000;
     font-size: 16px;
-    margin-left: 12px;
+    margin-left: 10px;
     padding-bottom: 3px;
   }
 
   .title-active {
     font-family: $font-family;
-    color: #ffffff; // Màu chữ cho tiêu đề active
+    color: #ffffff;
     font-size: 16px;
-    margin-left: 12px;
+    margin-left: 10px;
     padding-bottom: 3px;
   }
 
@@ -43,16 +50,16 @@
     padding-bottom: 11px;
     align-items: center;
     display: flex;
-    width: 255px;
+    width: 240px;
 
     &.nav-link-active {
-      background-color: #3461ff; // Màu nền cho mục active
-      color: white; // Màu chữ cho mục active
+      background-color: #3461ff;
+      color: white;
       padding-top: 11px;
       padding-bottom: 11px;
       align-items: center;
       display: flex;
-      width: 255px;
+      width: 240px;
     }
   }
 
@@ -71,5 +78,9 @@
 
   .arrow.down {
     transform: rotate(0deg);
+  }
+  .sidebar {
+    padding: 0;
+    width: 250px;
   }
 }
