Add delete partner. Add ModalOverlay. Fix edit UI (add new button and justify edit pagination)

--- a/src/components/edit-partner/EditPartner.scss
+++ b/src/components/edit-partner/EditPartner.scss
@@ -14,6 +14,16 @@
     padding-top: 1rem;
     height: 100%;
 
+    .tab-layout-div {
+      display: flex;
+      width: 100%;
+      height: fit-content;
+      flex-direction: column;
+      align-items: start;
+      justify-content: start;
+      gap: 1rem;
+    }
+
     .title-text {
       display: flex;
       width: fit-content;
