--- a/src/components/product-list/dialog/addProductDialog/AddProductDialog.scss
+++ b/src/components/product-list/dialog/addProductDialog/AddProductDialog.scss
@@ -1,3 +1,5 @@
+@import "../../../../scss/variables";
+
 .dialog-overlay {
     position: fixed;
     top: 0;
@@ -21,7 +23,8 @@
         display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 7px;
+    font-size: get-font-size($title-font-size, sm);
 
     h2 {
       font-size: 1.5rem;
@@ -55,7 +58,7 @@
     flex-direction: column;
 
     .input-group {
-        background-color: #f0f4ff; // Light blue background
+        background-color: #d6dfff; // Light blue background
         padding: 10px;
         border-radius: 8px;
         margin-bottom: 15px;
@@ -97,18 +100,21 @@
   
   .dialog-actions {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    gap: 20px;
     margin-top: 20px;
   
     button {
       padding: 10px 20px;
       border: none;
-      border-radius: 4px;
+      border-radius: 15px;
       cursor: pointer;
     }
   
     button[type="button"] {
-      background-color: #f0f0f0;
+      background-color: $white;
+      border: solid 1px  get-color($primary, "500");
+      color: get-color($primary, "500");
     }
   
     button[type="button"]:last-child {
