--- a/src/components/product-list/tab/tabLayout/ProductListLayout.scss
+++ b/src/components/product-list/tab/tabLayout/ProductListLayout.scss
@@ -23,6 +23,7 @@
   height: 100%;
   background: white;
   gap: 12px;
+
 }
 
 .title-text {
@@ -34,3 +35,28 @@
   font-family: $font-family;
   margin: 0;
 }
+
+.container-1{
+  position: relative;
+ 
+  width: 100%;
+  height: 100%;
+}
+
+
+// .container{
+//   align-items: start;
+//   justify-content: center;
+//   display: flex;
+//   width: 100%;
+//   height: 100%;
+//   background: white;
+
+//   .rightside{
+//     padding-left: 1rem;
+//     padding-top: 1rem;
+//     display: flex;
+//     flex-direction: column;
+//   }
+// }
+
