--- a/src/components/partner-list/pagination/PaginationContent.scss
+++ b/src/components/partner-list/pagination/PaginationContent.scss
@@ -191,9 +191,11 @@
     }
   }
 
-  .prev.page-item {
+  .prev.page-item,
+  .next.page-item {
     padding: 0;
     margin: 0;
+
     &:hover {
       cursor: pointer;
       background-color: transparent;
@@ -201,13 +203,9 @@
     }
   }
 
-  .next.page-item {
-    padding: 0;
-    margin: 0;
-    &:hover {
-      cursor: pointer;
-      background-color: transparent;
-      text-decoration: none;
-    }
+  .prev.page-item.disabled,
+  .next.page-item.disabled {
+    opacity: 0.5;
+    cursor: default;
   }
 }
