--- a/FrontEnd/src/components/sidebar/Sidebar.scss
+++ b/FrontEnd/src/components/sidebar/Sidebar.scss
@@ -103,7 +103,6 @@
     padding: 15px 0; 
     background-color: get-color($secondary, "100"); 
     color: get-color($neutral, "300"); 
-    //border: 2px solid get-color($primary, "100"); 
     border-radius: 10px; 
     display: flex;
     justify-content: center; 
@@ -121,7 +120,7 @@
     &:hover {
       background-color: get-color($accent, "200");
       color: get-color($accent, "100");
-      border: 2px solid get-color($accent, "100"); ;
+      //border: 2px solid get-color($accent, "100"); ;
 
       i {
         color: get-color($accent, "100"); 
