--- a/FrontEnd/src/components/header/Header.scss
+++ b/FrontEnd/src/components/header/Header.scss
@@ -6,8 +6,8 @@
   align-items: flex-start; 
   width: 100%;
   padding: 20px 32px;
-  background-color: #ffffff;
-  border-bottom: 1px solid #bcbaba;
+  margin-left: .5%;
+  background-color: get-color($background, "100");
 
   h1 {
     margin: 0; 
