--- a/FrontEnd/src/pages/Homepage/Homepage.scss
+++ b/FrontEnd/src/pages/Homepage/Homepage.scss
@@ -28,7 +28,7 @@
 .main-content {
   display: flex;
   flex-direction: column;
-  margin-top: 1.5rem;
+  //margin-top: 1.5rem;
   text-align: start;
   left: 0;
   width: 100%;
