--- a/FrontEnd/src/scss/_variables.scss
+++ b/FrontEnd/src/scss/_variables.scss
@@ -52,10 +52,10 @@ $theme-colors: (
 
 //-------------------------TYPO------------------------------
 // Import Google Fonts
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 // Font Family
-$font-family: Poppins;
+$font-family: 'Barlow';
 
 // Title Font Size
 $title-font-size: (
@@ -93,7 +93,7 @@ $font-weight: (
 
 //------------------------BUTTON----------------------------
 
-$btn-font-family: Poppins;
+$btn-font-family: 'Barlow';
 $btn-font-size: get-font-size($body-font-size, md);
 $btn-link-font-size: get-font-size($body-font-size, rg);
 $btn-font-weight: get-font-weight($font-weight, medium);
