them checkbox cho table

--- a/FrontEnd/src/components/customer-list/table/DataTable.scss
+++ b/FrontEnd/src/components/customer-list/table/DataTable.scss
@@ -61,7 +61,7 @@ table {
       padding-top: 20px;
       padding-bottom: 20px;
       padding-left: 16px;
-      border-bottom: 1px solid #bcbaba;
+      //border-bottom: 1px solid #bcbaba;
     }
 
     .action-button {
