--- a/FrontEnd/src/components/header/Header.scss
+++ b/FrontEnd/src/components/header/Header.scss
@@ -4,9 +4,9 @@
   display: flex;
   flex-direction: column; 
   align-items: flex-start; 
-  width: 100%;
+  width: 110%;
+  margin-left: -1.5%;
   padding: 20px 32px;
-  margin-left: .5%;
   background-color: get-color($background, "100");
 
   h1 {
