for table staff

--- a/FrontEnd/src/components/form/Create/Customer/create-customer.scss
+++ b/FrontEnd/src/components/form/Create/Customer/create-customer.scss
@@ -78,8 +78,8 @@
   }
 
 
-  .customer-sex {
-    width: 90px; // Set a fixed width for customer sex
+  .customer-gender {
+    width: 90px; // Set a fixed width for customer gender
     max-width: 100%; // Ensure it does not exceed its container
   }
 }
